[package]
name = "supabase-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v7"] }
tokio = { version = "1.39.3", features = ["full"] }
