[package]
name = "supabase-storage-rs"
authors = ["Eric Biggs"]
description = "Supabase storage implementation following the official client libraries."
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["supabase", "supabase-storage", "storage"]
categories = ["database"]
homepage = "https://supabase.com"
repository = "https://github.com/proziam/supabase-storage-rs"

[dependencies]
reqwest = { version = "0.12.8", features = ["multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v7"] }
tokio = { version = "1.39.3", features = ["full"] }
